Fix bug with text-align

--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@ footer {
         display: flex;
         justify-content: space-between;
         align-self: center;
-        text-align: center;
+        /* text-align: center; */
         padding: 0 10px;
     }
 }
